test/performance/vectorization/foreach/parse-foreach.good
parse-foreach.chpl:5: error: foreach is not yet implemented
parse-foreach.chpl:6: error: foreach is not yet implemented
parse-foreach.chpl:7: error: foreach is not yet implemented
parse-foreach.chpl:8: error: foreach is not yet implemented
parse-foreach.chpl:10: error: foreach is not yet implemented
parse-foreach.chpl:11: error: foreach is not yet implemented
parse-foreach.chpl:12: error: foreach is not yet implemented
parse-foreach.chpl:13: error: foreach is not yet implemented
